Moved range slider handling to separate function

--- a/AudioKitTest/Base.lproj/Main.storyboard
+++ b/AudioKitTest/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                 <rect key="frame" x="128" y="58" width="118" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
-                                    <action selector="ControlOscillators:" destination="BYZ-38-t0r" eventType="valueChanged" id="0l4-gD-oN4"/>
+                                    <action selector="AdjustRange:" destination="BYZ-38-t0r" eventType="valueChanged" id="dZW-yS-cOU"/>
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KSD-Oj-jQn">
